Add while statements and grid inexing

--- a/codingIntro_python.ipynb
+++ b/codingIntro_python.ipynb
@@ -5,7 +5,7 @@
    "id": "b2f22aee",
    "metadata": {},
    "source": [
-    "# Intro: Coding basics\n",
+    "# Intro to coding \n",
     "\n",
     "Let's learn how to code! First, we'll look at the basics. Then, we'll see how to use these basics in practice. "
    ]
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "3f8bdd9a",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "9dbb4ded",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "c40ea2df",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "d555411f",
    "metadata": {},
    "outputs": [
@@ -108,16 +108,16 @@
    ],
    "source": [
     "# Step 4: doing more maths! \n",
-    "x = 5\n",
-    "y = 2 * x\n",
-    "print(y)\n",
+    "a = 5\n",
+    "b = 2 * a\n",
+    "print(b)\n",
     "# Try changing the values of a and b.\n",
     "# What happens to c? Try subtraction or multiplication too."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "c26168e4",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "7b8671bd",
    "metadata": {},
    "outputs": [
@@ -166,12 +166,12 @@
     "numbers = [1, 2, 3, 4]\n",
     "print(\"Numbers:\", numbers)\n",
     "\n",
-    "# Challenge: Add another number to the list. What happens when you run the code?"
+    "# Challenge: Add another number to the list using list.append(number). What happens when you run the code?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "3ea9c5ca",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "613278b2",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "c687f8dc",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "c7dcfca3",
    "metadata": {},
    "outputs": [
@@ -272,6 +272,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "210afdaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 is smaller than 3\n",
+      "1 is smaller than 3\n",
+      "2 is smaller than 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0 \n",
+    "while x < 3:\n",
+    "    print(x, \"is smaller than 3\")\n",
+    "    x += 1 # same as x = x + 1 \n",
+    "\n",
+    "# What will x be?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cf29699f",
    "metadata": {},
@@ -283,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "002ae27f",
    "metadata": {},
    "outputs": [
@@ -307,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "id": "f8b657df",
    "metadata": {},
    "outputs": [
@@ -331,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "id": "bf8c732a",
    "metadata": {},
    "outputs": [
@@ -369,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "6aef0c71",
    "metadata": {},
    "outputs": [
@@ -401,7 +426,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
+   "id": "46506a80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1]\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accessing or \"indexing\" elements of the grid is done like this:\n",
+    "print(grid[0]) # first row\n",
+    "print(grid[1][0]) # first column of second row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "f17f7cea",
    "metadata": {},
    "outputs": [
@@ -411,7 +457,7 @@
        "3"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "51d96dfd",
    "metadata": {},
    "outputs": [
