Enable binder: run script from notebook; add requirements

--- a/codingIntro_python.ipynb
+++ b/codingIntro_python.ipynb
@@ -26,18 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "3f8bdd9a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 1: first variable! \n",
     "x = 5 \n",
@@ -48,18 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "9dbb4ded",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 2: change the variable\n",
     "x = 5 \n",
@@ -70,18 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "c40ea2df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 3: doing maths with variables\n",
     "a = 5 \n",
@@ -94,18 +70,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "d555411f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 4: doing more maths! \n",
     "a = 5\n",
@@ -117,18 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "c26168e4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello James\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 5: variables can not just hold numbers, but also text \n",
     "name = \"James\"\n",
@@ -149,18 +109,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "7b8671bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Numbers: [1, 2, 3, 4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# First list! \n",
     "numbers = [1, 2, 3, 4]\n",
@@ -171,19 +123,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "3ea9c5ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First number is: 1\n",
-      "Second number is: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# You can get items out of a list using square brackets.\n",
     "print(\"First number is:\", numbers[0])\n",
@@ -195,21 +138,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "613278b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I found: 1\n",
-      "I found: 2\n",
-      "I found: 3\n",
-      "I found: 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# A for loop repeats the same thing for every item in the list\n",
     "# This is very useful if the list is long\n",
@@ -231,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "c687f8dc",
    "metadata": {},
    "outputs": [],
@@ -247,18 +179,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "c7dcfca3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x is bigger than 3!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add an \"else\" \n",
     "x = 5\n",
@@ -273,20 +197,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "210afdaf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 is smaller than 3\n",
-      "1 is smaller than 3\n",
-      "2 is smaller than 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 0 \n",
     "while x < 3:\n",
@@ -308,18 +222,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "002ae27f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, world!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# First function! \n",
     "def say_hello():\n",
@@ -332,18 +238,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "f8b657df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, James!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Function with an input! This makes it flexible \n",
     "def greet(name):\n",
@@ -356,18 +254,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "bf8c732a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# A function with an output \n",
     "def add(x, y):\n",
@@ -394,20 +284,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "6aef0c71",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 1]\n",
-      "[1, 0, 0]\n",
-      "[0, 1, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We store the grid as a 2D list, like a list of lists:\n",
     "grid = [\n",
@@ -426,19 +306,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "46506a80",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 1]\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Accessing or \"indexing\" elements of the grid is done like this:\n",
     "print(grid[0]) # first row\n",
@@ -447,21 +318,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "f17f7cea",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cells become dead or alive based on how many of their neighbors are dead/alive.\n",
     "# To play the game, we count the alive neighbors around each cell.\n",
@@ -499,25 +359,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "51d96dfd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grid:\n",
-      "[0, 0, 1]\n",
-      "[1, 0, 0]\n",
-      "[0, 1, 0]\n",
-      "New grid:\n",
-      "[0, 0, 0]\n",
-      "[0, 1, 0]\n",
-      "[0, 0, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def next_generation(grid):\n",
     "    new_grid = [] # fill this list \n",
@@ -557,12 +402,76 @@
     "\n",
     "To play, go to the command line and type: \n",
     "`python game_of_life.py` \n",
-    "* Try different options, and try to explain what happens. \n",
-    "    - `python game_of_life.py block`\n",
-    "    - `python game_of_life.py blinker`\n",
-    "* Try a more complex pattern!\n",
-    "     - `python game_of_life.py beacon`\n",
-    "* Type `python game_of_life.py help` to see the other options\n",
+    "If you're running this code online, instead execute the following cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b249268",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run game_of_life.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08ce6e05",
+   "metadata": {},
+   "source": [
+    "The game can be run starting from different initial patterns (living & death cells). Let's try a few"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d82b3a69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Can you explain what happens with this initial pattern?\n",
+    "%run game_of_life.py block"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "370a87a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# what about this one?\n",
+    "%run game_of_life.py blinker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fd76472",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A more complex, random, pattern:\n",
+    "%run game_of_life.py random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f29baece",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check out the available patterns with the help option\n",
+    "%run game_of_life.py help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20e5e2ca",
+   "metadata": {},
+   "source": [
     "\n",
     "## Change the game \n",
     "\n",
