Update online (binder) instructions

--- a/codingIntro_python.ipynb
+++ b/codingIntro_python.ipynb
@@ -400,9 +400,7 @@
    "source": [
     "## Play the game \n",
     "\n",
-    "To play, go to the command line and type: \n",
-    "`python game_of_life.py` \n",
-    "If you're running this code online, instead execute the following cell:"
+    "To play, run the `game_of_life.py` script from the following cell, or from the command line (`python game_of_life.py`)"
    ]
   },
   {
