Minor updates based on first try with students

--- a/codingIntro_python.ipynb
+++ b/codingIntro_python.ipynb
@@ -169,12 +169,12 @@
    "outputs": [],
    "source": [
     "# First if statement!\n",
-    "x = 2\n",
+    "x = 5\n",
     "\n",
     "if x > 3:\n",
     "    print(\"x is bigger than 3!\")\n",
     "\n",
-    "# Change x to a smaller number (like 2). What happens? Try x = 10."
+    "# Change x to a smaller number (like 2). What happens? "
    ]
   },
   {
@@ -474,11 +474,11 @@
     "## Change the game \n",
     "\n",
     "If you have time, do some coding yourself! \n",
-    "- Change the size of the grid (line 6)\n",
-    "- Change the colors that indicate dead/alive (lines 9,10)\n",
-    "- Change the speed of the game (line 246)\n",
-    "- In the random pattern, change the probability of being alive (line 151)\n",
-    "- Change the rules, for example, make cells survive with 4 neighbors survive (line 212). "
+    "- Change the size of the grid (line 10)\n",
+    "- Change the colors that indicate dead/alive (lines 14, 15)\n",
+    "- Change the speed of the game (line 248)\n",
+    "- In the random pattern, change the probability of being alive (line 153)\n",
+    "- Change the rules, for example, make cells survive with 4 neighbors survive (line 201). "
    ]
   }
  ],
